# gap-library-back

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1f4b7c2a9d31_add_document_list_indexes.py  2d1c0f8c9d21_add_unique_constraint_to_document_reactions.py  4d2c8b8ce004_initial_schema.py  6a7b8c9d0e11_add_documents_status_updated_at_index.py  7b0d8c6e2f44_add_document_content_path.py  8b9c0d1e2f33_make_document_content_path_nullable.py  9c8d2a1f7b10_add_document_owner_snapshot.py
docs/: API_INTEGRATION_GUIDE.md  FRONTEND_API_TYPES_AND_STATES.md  frontend-avatar-upload-request.md
docs/sql/: 20260602_add_document_content_path.sql  20260602_add_document_list_indexes.sql  20260602_add_document_owner_snapshot.sql
src/app/: main.py
src/app/core/: config.py  exceptions.py  security.py
src/app/db/: session.py
src/app/jobs/: purge_expired_drafts.py
src/app/models/: __init__.py  base.py  document.py  enums.py  signup_request.py  user.py
src/app/repositories/: content_repository.py  document_repository.py  refresh_token_repository.py  signup_request_repository.py  user_repository.py
src/app/schemas/: admin.py  auth.py  common.py  content.py  document.py  signup_request.py  user.py
src/app/services/: admin_service.py  auth_service.py  bootstrap_service.py  content_service.py  document_render_service.py  document_service.py  document_spell_check_service.py  document_storage.py  draft_cleanup_scheduler.py  (+3 more)
tests/: conftest.py  test_smoke_api.py
(+26 files in other folders)
